--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0"
   },
